# elf-size-analyze

./: README.md  elf-size-analyze.py  pyproject.toml
elfSizeAnalyze/: __main__.py  elfSizeAnalyze.py
elfSizeAnalyze/misc/: argumentParser.py  color.py  helpers.py  section.py  symbol.py  treeNode.py
