[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "elfSizeAnalyze"
description = "Tool to analyze elf files"
authors = [
    {name = "Jedrzej Boczar"},
    {name = "Dominic Kuschmierz"},
    {name = "Adel Mamin"},
    {name = "Amir Gonnen"}
]
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ndicts==0.1.0",
    "mergedeep==1.3.4"
]
version = "0.1.2"

[project.optional-dependencies]
dev = ["pylint==2.6.0", "pytest==7.2.0", "black==20.8b1"]

[project.urls]
repository = "https://github.com/dkuschmierz/elf-size-analyze"

[project.scripts]
elfSizeAnalyze = "elfSizeAnalyze.elfSizeAnalyze:main"
